--- a/pages/index.css
+++ b/pages/index.css
@@ -1,2 +1,12 @@
+/* Fonts */
+@import url(../fonts/Inter/fonts-inter.css);
+
 /* Root */
 @import url(../blocks/root/root.css);
+
+/* Header */
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__language/header__language.css);
+@import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/header/__link/_active/header__link_active.css);
