--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,7 +1,6 @@
 .root {
-    min-width: 1280px;
-    font-family: "Inter", Arial, sans-serif;
-    font-style: normal;
+    max-width: 1280px;
+    font-family: "inter", Arial, sans-serif;
     margin: 0 auto;
     background: #2A2C2F;
 }
