--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,23 @@
 .cover {
-  max-width: 1184px;
-  height: 740px;
   position: relative;
-  margin: 0 auto;
-  padding: 92px 0 0 0;
+  width: 1184px;
+  height: 740px;
+  margin: 92px auto 0 auto;
+  background: url(../../images/cover__background.jpg) no-repeat;
+  background-size: cover;
+}
+
+.cover::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #2a2c2f;
+  opacity: 0.3;
+  content: "";
+  transition: 0.3s ease;
+}
+
+.cover:hover::before {
+  opacity: 0.8;
+  transition: 0.3s ease;
 }
