--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,3 +2,16 @@
     justify-self: start;
     padding: 28px 0 0 48px;
 }
+
+@media screen and (max-width: 768px) {
+    .header__logo {
+        padding: 28px 0 0 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header__logo {
+        width: 142px;
+        padding: 16px 0 0 16px;
+    }
+}
