--- a/blocks/intro/__text-span/intro__text-span.css
+++ b/blocks/intro/__text-span/intro__text-span.css
@@ -1,7 +1,7 @@
 .intro__text-span {
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 0.75rem;
   line-height: 18px;
   color: #ffffff;
 }
