--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,11 +1,8 @@
 .cover__link {
-  font-style: normal;
-  font-weight: 900;
-  font-size: 72px;
-  line-height: 76px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   text-decoration: none;
-  color: #ffffff;
-  margin: 0;
-  padding: 0;
-  z-index: 1;
 }
