--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,14 +2,38 @@
   position: absolute;
   top: 429px;
   left: 412px;
-  width: 360px;
+  max-width: 360px;
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 1.125rem;
   line-height: 22px;
   text-align: center;
   color: #ffffff;
   margin: 0;
   padding: 0;
-  z-index: 1;
+}
+
+@media screen and (max-width: 1024px) {
+  .cover__subtitle {
+    margin-top: 2px;
+    top: 379px;
+    left: 332px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__subtitle {
+    top: 297px;
+    left: 204px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__subtitle {
+    max-width: 260px;
+    font-size: 0.875rem;
+    line-height: 16px;
+    top: 119px;
+    left: 32px;
+  }
 }
