--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,7 +3,7 @@
   width: 1184px;
   height: 740px;
   margin: 92px auto 0 auto;
-  background: url(../../images/cover__background.jpg) no-repeat;
+  background: url("../../images/cover__background.jpg") no-repeat;
   background-size: cover;
 }
 
@@ -14,10 +14,32 @@
   background: #2a2c2f;
   opacity: 0.3;
   content: "";
-  transition: 0.3s ease;
+  transition: opacity 0.3s ease;
 }
 
 .cover:hover::before {
   opacity: 0.8;
-  transition: 0.3s ease;
+  transition: opacity 0.3s ease;
+}
+
+@media screen and (max-width: 1024px) {
+  .cover {
+    width: 1024px;
+    height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover {
+    width: 768px;
+    height: 480px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover {
+    width: 320px;
+    height: 200px;
+    margin: 66px auto 0 auto;
+  }
 }
