--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -1,10 +1,15 @@
 .footer__author {
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 16px;
-  text-align: right;
   color: #ffffff;
   margin: 0;
   padding: 0;
+}
+
+@media screen and (max-width: 320px) {
+  .footer__author {
+      text-align: start;
+  }
 }
