--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,3 +1,15 @@
 .footer__copyright {
     justify-self: end;
 }
+
+@media screen and (max-width: 1024px) {
+    .footer__copyright {
+        margin-top: 5px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .footer__copyright {
+        margin: 0;
+    }
+}
