--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,7 +1,7 @@
 .footer__link {
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 18px;
   color: #ffffff;
   text-decoration: none;
@@ -11,4 +11,16 @@
 .footer__link:hover {
   opacity: 0.8;
   transition: 0.3s ease;
+}
+
+@media screen and (max-width: 320px) {
+  .footer__link {
+    padding-bottom: 32px;
+    font-size: 1.5rem;
+    line-height: 24px;
+  }
+
+  .footer__link:last-child {
+    padding-bottom: 48px;
+  }
 }
