--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -7,3 +7,18 @@
     column-gap: 18px;
     margin: 0;
 }
+
+@media screen and (max-width: 1024px) {
+    .footer__list {
+        margin-top: 2px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .footer__list {
+        display: flex;
+        flex-direction: column;
+        max-width: 160px;
+        margin: 0;
+    }
+}
