--- a/blocks/header/__language/header__language.css
+++ b/blocks/header/__language/header__language.css
@@ -5,3 +5,15 @@
   margin: 0;
   padding: 46px 48px 0 0;
 }
+
+@media screen and (max-width: 768px) {
+  .header__language {
+    padding: 46px 24px 0 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header__language {
+    padding: 30px 16px 0 0;
+  }
+}
