--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,8 +1,15 @@
 .header__link {
   justify-self: end;
   font-weight: 400;
-  font-size: 24px;
+  font-size: 1.5rem;
   line-height: 28px;
   color: #fff;
   text-decoration: none;
+}
+
+@media screen and (max-width: 320px) {
+  .header__link {
+    font-size: 1.125rem;
+    line-height: 20px;
+  }
 }
