--- a/blocks/intro/__list-text/intro__list-text.css
+++ b/blocks/intro/__list-text/intro__list-text.css
@@ -1,7 +1,8 @@
 .intro__list-text {
   font-style: normal;
   font-weight: 700;
-  font-size: 12px;
+  font-size: 0.75rem;
   line-height: 18px;
   color: #ffffff;
+  margin: 0;
 }
