--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,9 +1,16 @@
 .intro__text {
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 163%;
+  font-size: 1rem;
+  line-height: 26px;
   color: #ffffff;
   padding: 40px 0 0 0;
   margin: 0;
+}
+
+@media screen and (max-width: 320px) {
+  .intro__text {
+    width: 288px;
+    
+  }
 }
