--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,9 +1,25 @@
 .intro__title {
   font-style: normal;
   font-weight: 900;
-  font-size: 54px;
+  font-size: 3.375rem;
   line-height: 58px;
   color: #ffffff;
   padding: 92px 0 0 0;
   margin: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .intro__title {
+    width: 720px;
+    padding: 88px 0 0 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro__title {
+    width: 250px;
+    padding: 64px 0 0 0;
+    font-size: 2rem;
+    line-height: 35px;
+  }
 }
