--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,3 +6,23 @@
     justify-items: start;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 1024px) {
+    .intro {
+        margin-left: 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .intro {
+        margin-left: 24px;
+        grid-template-columns: repeat(1, 720px);
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .intro {
+        margin-left: 16px;
+        grid-template-columns: repeat(1, 320px);
+    }
+}
