--- a/blocks/lead/__desc-img/lead__desc-img.css
+++ b/blocks/lead/__desc-img/lead__desc-img.css
@@ -1,10 +1,28 @@
 .lead__desc-img {
   font-weight: 400;
-  font-size: 10px;
+  font-size: 0.625rem;
   line-height: 14px;
   letter-spacing: 1.5px;
   text-transform: uppercase;
   color: #ffffff;
   justify-self: start;
   padding: 8px 0 0 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__desc-img {
+    padding: 5px 0 0 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead__desc-img {
+    padding: 5px 0 0 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__desc-img {
+    padding: 4px 0 0 16px;
+  }
 }
