--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,21 @@
 .lead__image {
-  width: 100%;
+  width: 984px;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__image {
+    width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead__image {
+    width: 768px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__image {
+    width: 320px;
+  }
 }
