--- a/blocks/lead/__main-img/lead__main-img.css
+++ b/blocks/lead/__main-img/lead__main-img.css
@@ -1,3 +1,15 @@
 .lead__main-img {
     margin: 64px 0 0 0;
 }
+
+@media screen and (max-width: 1024px) {
+    .lead__main-img {
+        margin: 56px 0 0 0;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__main-img {
+        margin: 40px 0 0 0;
+    }
+}
