--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,9 +1,18 @@
 .lead__subtitle {
-  max-width: 40rem;
+  max-width: 640px;
   font-weight: 400;
-  font-size: 30px;
+  font-size: 1.875rem;
   line-height: 36px;
   text-align: center;
   color: #ffffff;
   margin: 32px 0 0 0;
+}
+
+@media screen and (max-width: 320px) {
+  .lead__subtitle {
+    margin: 16px 0 0 0;
+    max-width: 640px;
+    font-size: 1rem;
+    line-height: 20px;
+  }
 }
