--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,9 +1,24 @@
 .lead__title {
-  width: 45rem;
+  max-width: 690px;
   font-weight: 900;
-  font-size: 96px;
+  font-size: 6rem;
   line-height: 100px;
   text-align: center;
   color: #ffffff;
   margin: 56px 0 0 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__title {
+    margin: 48px 0 0 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__title {
+    margin: 50px 0 0 0;
+    max-width: 288px;
+    font-size: 2.5rem;
+    line-height: 44px;
+  }
 }
