--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,5 +1,26 @@
 .photo-grid__item {
-    width: 100%;
-    height: 213px;
-    margin: 0;
+  width: 284px;
+  height: 213px;
+  margin: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .photo-grid__item {
+    width: 300px;
+    height: 225px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid__item {
+    width: 352px;
+    height: 264px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid__item {
+    width: 288px;
+    height: 2724px;
+  }
 }
