--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,6 +4,39 @@
     grid-template-columns: repeat(4, 284px);
     grid-template-rows: repeat(3, 213px);
     gap: 16px;
-    padding: 92px 0 0 0;
+    padding: 90px 0 0 0;
     margin: 0 auto;
+}
+
+@media screen and (max-width: 1024px) {
+    .photo-grid {
+        max-width: 928px;
+        display: grid;
+        grid-template-columns: repeat(3, 300px);
+        grid-template-rows: repeat(4, 225px);
+        gap: 14px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .photo-grid {
+        max-width: 720px;
+        display: grid;
+        grid-template-columns: repeat(2, 352px);
+        grid-template-rows: repeat(6, 264px);
+        gap: 16px;
+        padding: 88px 0 0 0;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .photo-grid {
+        max-width: 320px;
+        display: grid;
+        grid-template-columns: repeat(1, 288px);
+        grid-template-rows: repeat(12, 216px);
+        padding: 64px 0 0 0;
+        margin-left: 16px;
+        gap: 12px;
+    }
 }
