--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -3,14 +3,14 @@
   width: fit-content;
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 1.125rem;
   line-height: 22px;
   text-decoration-line: underline;
   color: #ffffff;
-  transition: 0.3s ease;
+  transition: opacity 0.3s ease;
 }
 
 .place__link:hover {
   opacity: 0.8;
-  transition: 0.3s ease;
+  transition: opacity 0.3s ease;
 }
