--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,14 +1,33 @@
 .place__paragraph {
-  width: 484px;
+  max-width: 100%;
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 163%;
+  font-size: 1.125rem;
+  line-height: 29px;
   color: #ffffff;
   padding: 0;
   margin: 0;
 }
 
 .place__paragraph:nth-child(2) {
-    margin-top: 26px;
+  margin-top: 26px;
+}
+
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    font-size: 1rem;
+    line-height: 26px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__paragraph {
+    margin-left: 16px;
+    padding-top: 32px;
+  }
+
+  .place__paragraph:nth-child(2) {
+    padding-top: 25px;
+    margin-top: 0;
+  }
 }
