--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,3 +1,15 @@
 .place__paragraphs {
-    
+    width: 484px;
+}
+
+@media screen and (max-width: 768px) {
+    .place__paragraphs {
+        width: 352px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__paragraphs {
+        width: 288px;
+    }
 }
