--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,3 +9,25 @@
 .place:last-child {
     padding-bottom: 0;
 }
+
+@media screen and (max-width: 1024px) {
+    .place {
+        grid-template-columns: 440px 456px;
+        column-gap: 32px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .place {
+        grid-template-columns: 340px 352px;
+        column-gap: 28px;
+        padding: 0 0 72px 0;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place {
+        grid-template-columns: 320px;
+        padding: 0 0 50px 0;
+    }
+}
