--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,3 +3,23 @@
     margin: 0 auto;
     padding: 92px 0 0 0;
 }
+
+@media screen and (max-width: 1024px) {
+    .places {
+        margin-left: 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .places {
+        padding: 88px 0 0 0;
+        margin-left: 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .places {
+        padding: 64px 0 0 0;
+        margin: 0;
+    }
+}
