--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,6 +1,4 @@
 .root {
-    max-width: 1280px;
-    font-family: "inter", Arial, sans-serif;
-    margin: 0 auto;
-    background: #2A2C2F;
+  font-family: "inter", Arial, sans-serif;
+  background: #2a2c2f;
 }
