--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -2,8 +2,7 @@
     display: grid;
     grid-template-columns: 50px 57px 94px 86px 106px;
     grid-template-areas: 
-    "footer__link footer__link footer__link footer__link footer__link"
-    ;
+    "footer__link footer__link footer__link footer__link footer__link";
     column-gap: 18px;
     margin: 0;
 }
