--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,3 +3,10 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(1, 1fr);
 }
+
+@media screen and (max-width: 1024px) {
+  .header {
+    max-width: 928px;
+    margin: 0 auto;
+  }
+}
