--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,28 +1,23 @@
 .intro {
-    max-width: 984px;
-    display: grid;
-    grid-template-columns: repeat(1, 690px);
-    grid-template-rows: repeat(1, 1fr);
-    justify-items: start;
-    margin: 0 auto;
+    max-width: 690px;
 }
 
 @media screen and (max-width: 1024px) {
     .intro {
-        margin-left: 48px;
+        padding-left: 48px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .intro {
-        margin-left: 24px;
+        padding-left: 24px;
         grid-template-columns: repeat(1, 720px);
     }
 }
 
 @media screen and (max-width: 320px) {
     .intro {
-        margin-left: 16px;
+        padding-left: 16px;
         grid-template-columns: repeat(1, 320px);
     }
 }
