--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,8 +5,17 @@
   justify-items: center;
 }
 
+@media screen and (max-width: 1024px) {
+  .lead {
+    max-width: 928px;
+    margin: 0 auto;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .lead {
+    max-width: 768px;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(1, 768px);
     grid-template-rows: repeat(1, 1fr);
@@ -16,6 +25,8 @@
 
 @media screen and (max-width: 320px) {
   .lead {
+    max-width: 320px;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(1, 320px);
     grid-template-rows: repeat(1, 1fr);
