--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -6,14 +6,13 @@
 
 @media screen and (max-width: 1024px) {
     .places {
-        margin-left: 48px;
+        padding-left: 48px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .places {
-        padding: 88px 0 0 0;
-        margin-left: 24px;
+        padding: 88px 0 0 24px;
     }
 }
 
