--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 .cover {
   position: relative;
-  width: 1184px;
+  max-width: 1184px;
   height: 740px;
   margin: 92px auto 0 auto;
   background: url("../../images/cover__background.jpg") no-repeat;
