--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -14,6 +14,13 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .lead__title {
+    margin: 48px 0 0 0;
+    max-width: 720px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .lead__title {
     margin: 50px 0 0 0;
