--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -4,7 +4,7 @@
   font-size: 3.375rem;
   line-height: 58px;
   color: #ffffff;
-  padding: 92px 0 0 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 768px) {
