--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,4 @@
 .cover__subtitle {
-  position: absolute;
-  top: 429px;
-  left: 412px;
   max-width: 360px;
   font-style: normal;
   font-weight: 400;
@@ -11,20 +8,14 @@
   color: #ffffff;
   margin: 0;
   padding: 0;
+  z-index: 3;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 535px) {
   .cover__subtitle {
-    margin-top: 2px;
-    top: 379px;
-    left: 332px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover__subtitle {
-    top: 297px;
-    left: 204px;
+    max-width: 300px;
+    font-size: 1rem;
+    line-height: 18px;
   }
 }
 
@@ -33,7 +24,5 @@
     max-width: 260px;
     font-size: 0.875rem;
     line-height: 16px;
-    top: 119px;
-    left: 32px;
   }
 }
