--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,43 +3,26 @@
   max-width: 1184px;
   height: 740px;
   margin: 92px auto 0 auto;
-  background: url("../../images/cover__background.jpg") no-repeat;
-  background-size: cover;
-}
-
-.cover::before {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #2a2c2f;
-  opacity: 0.3;
-  content: "";
-  transition: opacity 0.3s ease;
-}
-
-.cover:hover::before {
-  opacity: 0.8;
-  transition: opacity 0.3s ease;
 }
 
 @media screen and (max-width: 1024px) {
   .cover {
-    width: 1024px;
+    max-width: 1024px;
     height: 640px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover {
-    width: 768px;
+    max-width: 768px;
     height: 480px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover {
-    width: 320px;
+    max-width: 320px;
     height: 200px;
-    margin: 66px auto 0 auto;
+    padding: 66px auto 0 auto;
   }
 }
