--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -1,23 +1,32 @@
 .footer__list {
-    display: grid;
-    grid-template-columns: 50px 57px 94px 86px 106px;
-    grid-template-areas: 
-    "footer__link footer__link footer__link footer__link footer__link";
-    column-gap: 18px;
-    margin: 0;
+  display: grid;
+  grid-template-columns: 50px 57px 94px 86px 106px;
+  grid-template-areas: "footer__link footer__link footer__link footer__link footer__link";
+  column-gap: 18px;
+  margin: 0;
 }
 
 @media screen and (max-width: 1024px) {
-    .footer__list {
-        margin-top: 2px;
-    }
+  .footer__list {
+    margin-top: 2px;
+  }
+}
+
+@media screen and (max-width: 688px) {
+  .footer__list {
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
 
 @media screen and (max-width: 320px) {
-    .footer__list {
-        display: flex;
-        flex-direction: column;
-        max-width: 160px;
-        margin: 0;
-    }
+  .footer__list {
+    display: flex;
+    flex-direction: column;
+    max-width: 160px;
+    margin: 0;
+    height: auto;
+  }
 }
