--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -19,10 +19,20 @@
   }
 }
 
+@media screen and (max-width: 688px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 34px 0 24px 16px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .footer {
     display: flex;
     flex-direction: column;
+    text-align: left;
     max-width: 720px;
     padding: 64px 0 24px 16px;
   }
