--- a/blocks/header/__language/header__language.css
+++ b/blocks/header/__language/header__language.css
@@ -6,6 +6,12 @@
   padding: 46px 48px 0 0;
 }
 
+@media screen and (max-width: 1024px) {
+  .header__language {
+    padding: 46px 0 0 0;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .header__language {
     padding: 46px 24px 0 0;
