--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,6 +3,12 @@
     padding: 28px 0 0 48px;
 }
 
+@media screen and (max-width: 1024px) {
+    .header__logo {
+        padding: 28px 0 0 0;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .header__logo {
         padding: 28px 0 0 24px;
