--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,4 +1,5 @@
 .intro__text {
+  max-width: 690px;
   font-style: normal;
   font-weight: 400;
   font-size: 1rem;
@@ -10,7 +11,6 @@
 
 @media screen and (max-width: 320px) {
   .intro__text {
-    width: 288px;
-    
+    max-width: 288px;
   }
 }
