--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -9,15 +9,14 @@
 
 @media screen and (max-width: 768px) {
   .intro__title {
-    width: 720px;
-    padding: 88px 0 0 0;
+    max-width: 720px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .intro__title {
-    width: 250px;
-    padding: 64px 0 0 0;
+    max-width: 250px;
+    padding: 0;
     font-size: 2rem;
     line-height: 35px;
   }
