--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,21 +1,21 @@
 .lead__image {
-  width: 984px;
+  width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
   .lead__image {
-    width: 928px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 768px) {
   .lead__image {
-    width: 768px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead__image {
-    width: 320px;
+    width: 100%;
   }
 }
