--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,27 +5,47 @@
   line-height: 100px;
   text-align: center;
   color: #ffffff;
-  margin: 56px 0 0 0;
+  padding: 56px 0 0 0;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 1024px) {
   .lead__title {
-    margin: 48px 0 0 0;
+    padding: 48px 0 0 0;
   }
 }
 
 @media screen and (max-width: 768px) {
   .lead__title {
-    margin: 48px 0 0 0;
-    max-width: 720px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 686px) {
+  .lead__title {
+    font-size: 4.5rem;
+    line-height: 74px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .lead__title {
+    font-size: 3rem;
+    line-height: 54px;
+  }
+}
+
+@media screen and (max-width: 342px) {
+  .lead__title {
+    font-size: 2.5rem;
+    line-height: 50px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead__title {
-    margin: 50px 0 0 0;
+    padding: 50px 0 0 0;
     max-width: 288px;
-    font-size: 2.5rem;
     line-height: 44px;
   }
 }
