--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,26 +1,26 @@
 .photo-grid__item {
-  width: 284px;
-  height: 213px;
+  width: auto;
   margin: 0;
+  height: 213px;
 }
 
 @media screen and (max-width: 1024px) {
   .photo-grid__item {
-    width: 300px;
+    width: auto;
     height: 225px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid__item {
-    width: 352px;
+    width: auto;
     height: 264px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .photo-grid__item {
-    width: 288px;
-    height: 2724px;
+    width: auto;
+    height: 216px;
   }
 }
