--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,10 +1,10 @@
 .photo-grid {
     max-width: 1184px;
     display: grid;
-    grid-template-columns: repeat(4, 284px);
-    grid-template-rows: repeat(3, 213px);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     gap: 16px;
-    padding: 90px 0 0 0;
+    padding: 92px 0 0 0;
     margin: 0 auto;
 }
 
@@ -12,9 +12,10 @@
     .photo-grid {
         max-width: 928px;
         display: grid;
-        grid-template-columns: repeat(3, 300px);
-        grid-template-rows: repeat(4, 225px);
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
         gap: 14px;
+        margin: 0 auto;
     }
 }
 
@@ -22,8 +23,8 @@
     .photo-grid {
         max-width: 720px;
         display: grid;
-        grid-template-columns: repeat(2, 352px);
-        grid-template-rows: repeat(6, 264px);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, 1fr);
         gap: 16px;
         padding: 88px 0 0 0;
     }
@@ -31,10 +32,10 @@
 
 @media screen and (max-width: 320px) {
     .photo-grid {
-        max-width: 320px;
+        max-width: 288px;
         display: grid;
-        grid-template-columns: repeat(1, 288px);
-        grid-template-rows: repeat(12, 216px);
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(12, 1fr);
         padding: 64px 0 0 0;
         margin-left: 16px;
         gap: 12px;
