--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -4,18 +4,12 @@
 
 @media screen and (max-width: 1024px) {
     .place__image {
-        max-width: 440px;
+        max-width: 100%;
     }
 }
 
 @media screen and (max-width: 768px) {
     .place__image {
-        max-width: 340px;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .place__image {
-        max-width: 320px;
+        max-width: 100%;
     }
 }
