--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,5 +1,5 @@
 .place__paragraphs {
-    width: 484px;
+    max-width: 484px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -10,12 +10,13 @@
 
 @media screen and (max-width: 768px) {
     .place__paragraphs {
-        width: 352px;
+        max-width: 352px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__paragraphs {
-        width: 288px;
+        max-width: 288px;
+        padding-left: 16px;
     }
 }
