--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,7 @@
 .place {
     display: grid;
-    grid-template-columns: repeat(2, 460px);
-    column-gap: 40px;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 16px;
     padding: 0 0 80px 0;
     margin: 0;
 }
@@ -12,22 +12,23 @@
 
 @media screen and (max-width: 1024px) {
     .place {
-        grid-template-columns: 440px 456px;
+        max-width: 928px;
+        grid-template-columns: 440px 1fr;
         column-gap: 32px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .place {
-        grid-template-columns: 340px 352px;
+        grid-template-columns: 340px 1fr;
         column-gap: 28px;
         padding: 0 0 72px 0;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 600px) {
     .place {
-        grid-template-columns: 320px;
+        grid-template-columns: 1fr;
         padding: 0 0 50px 0;
     }
 }
