--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -14,10 +14,10 @@
 
 @media screen and (max-width: 688px) {
   .footer__list {
-    height: 150px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 20px;
   }
 }
 
@@ -25,8 +25,8 @@
   .footer__list {
     display: flex;
     flex-direction: column;
+    gap: 32px;
     max-width: 160px;
     margin: 0;
-    height: auto;
   }
 }
