--- a/blocks/photo-grid/__image/photo-grid__image.css
+++ b/blocks/photo-grid/__image/photo-grid__image.css
@@ -1,9 +1,5 @@
 .photo-grid__image {
   width: 100%;
-}
-
-@media screen and (max-width: 1024px) {
-  .photo-grid__image {
-    height: 100%;
-  }
+  height: 100%;
+  object-fit: cover;
 }
