--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -30,6 +30,18 @@
     }
 }
 
+@media screen and (max-width: 620px) {
+    .photo-grid {
+        max-width: 288px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(12, 1fr);
+        padding: 64px 0 0 0;
+        margin: 0 auto;
+        gap: 12px;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .photo-grid {
         max-width: 288px;
