--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -18,6 +18,14 @@
     }
 }
 
+@media screen and (max-width: 786px) {
+    .place {
+        grid-template-columns: 340px 1fr;
+        column-gap: 10px;
+        padding: 0 0 72px 0;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .place {
         grid-template-columns: 340px 1fr;
@@ -26,9 +34,15 @@
     }
 }
 
+@media screen and (max-width: 650px) {
+    .place {
+        grid-template-columns: 300px 1fr;
+        padding: 0 0 50px 0;
+    }
+}
+
 @media screen and (max-width: 600px) {
     .place {
         grid-template-columns: 1fr;
-        padding: 0 0 50px 0;
     }
 }
