--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -16,6 +16,12 @@
     }
 }
 
+@media screen and (max-width: 600px) {
+    .places {
+        padding: 75px 24px 0 24px;
+    }
+}
+
 @media screen and (max-width: 450px) {
     .places {
         padding: 64px 0 0 0;
